[package]
name = "nss"
version = "0.7.1"
authors = ["Jed Davis <jld@mozilla.com>"]
description = "Bindings for the NSS cryptography library"
repository = "https://github.com/jld/nss-rs"
license = "MPL-2.0"

[dependencies]
nss-sys = { version = "0.1.8", path = "nss-sys" }
lazy_static = "1.5.0"
libc = "0.2"
